# vid-playlist-man

./: Cargo.toml  wrangler.toml
.devcontainer/: devcontainer.json  onStart.sh
src/: cf_utils.rs  discord.rs  fetcher.rs  htmlgen.rs  kvcache.rs  kvmanager.rs  lib.rs  logging.rs  playlist.rs  playlistviewer.rs  workercache.rs
template/: base.jinja  links.jinja  text.jinja
