[package]
name = "vid-playlist-man"
version = "0.1.0"
edition = "2024"
authors = ["Robin Mauritz <robinmauritzrm@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.6", features = ['http'] }
worker-macros = { version = "0.6", features = ['http'] }
http = "1.3"
gloo-net = "0.6.0"
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1.0.100"
time = { version = "0.3.44", features = ["formatting", "wasm-bindgen"] }
tracing = "0.1.41"
tracing-worker = "0.1.9"
wasmtimer = "0.4.3"
async-recursion = "1.1.1"
web-time = "1.1.0"
linkify = "0.10.0"
aho-corasick = "1.1.4"
itertools = "0.14.0"
croner = "3.0.1"
chrono = { version = "0.4.42", default-features = false, features = ["wasm-bindgen"] }
