[package]
name = "vid-playlist-man"
version = "0.1.0"
edition = "2024"
authors = ["Robin Mauritz <robinmauritzrm@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.6" }
worker-macros = { version = "0.6" }
http = "1.3"
gloo-net = "0.6.0"
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1.0.100"
time = { version = "0.3.44", features = ["formatting", "wasm-bindgen"] }
tracing = "0.1.41"
tracing-worker = { git = "https://github.com/RoganMatrivski/tracing-worker.git" }
wasmtimer = "0.4.3"
async-recursion = "1.1.1"
web-time = "1.1.0"
linkify = "0.10.0"
aho-corasick = "1.1.4"
itertools = "0.14.0"
croner = "3.0.1"
chrono = { version = "0.4.42", default-features = false, features = [
    "wasm-bindgen",
] }
backon = { version = "1.6.0" }
scraper = "0.24.0"
url = "2.5.7"
toml = "0.9.8"
serde_json = "1.0.145"
futures = { version = "0.3.31", default-features = false, features = ["alloc"] }
urlencoding = "2.1.3"
hypertext = "0.12.1"
form_urlencoded = "1.2.2"
minijinja = "2.12.0"
minijinja-embed = "2.12.0"
tracing-subscriber = "0.3.20"

[build-dependencies]
minijinja-embed = "2.12.0"
